--- a/style.css
+++ b/style.css
@@ -428,6 +428,7 @@ footer ul
         border-bottom: 2px solid #f2f2f2;
         text-align: center;
         margin-top: 5px;
+        padding-left:20px;
     }
     .ligne:hover
     {
