--- a/style.css
+++ b/style.css
@@ -213,6 +213,17 @@ input,value
     flex-direction: column;
 
 }
+#section1 a
+{
+    width:30%;
+    height:200px;
+    text-decoration: none;
+}
+#section1 a:visited
+{
+    color: black;
+    
+}
 
 #cadrehebergement
 {
@@ -227,7 +238,7 @@ input,value
 
 #cadrehebergement .photo
 {
-    width:30%;
+    width:100%;
     height:200px;
     border-radius: 20px;
     padding: 3px 3px 3px 3px;
@@ -258,6 +269,14 @@ input,value
 {
     margin-bottom:10px;
 }
+#cadrehebergement .iconebleu
+{
+    color:#0065fc
+}
+#cadrehebergement .iconegrise
+{
+    color:#d9d9d9;
+}
 #section2
 {
     width:30%;
@@ -267,6 +286,16 @@ input,value
     padding:10px 10px 0 30px;
     margin:0 0 30px 0;
     position: relative;
+}
+#section2 a
+{
+    width:90%;
+    text-decoration: none;
+}
+#section2 a:visited
+{
+    color: black;
+    
 }
 #titrepopulaire
 {
@@ -281,9 +310,9 @@ input,value
     background-color:white;
     border-radius: 20px;
     overflow: hidden;
-    margin:15px 15px;
+    margin:15px 15px 15px -12px;
     box-shadow:2px 2px rgb(231, 230, 230) ;
-    width:90%;
+    width:100%;
 }
 
 #cadrepopulaire .photo img
@@ -298,11 +327,29 @@ input,value
     width:60%;
     line-height:1.2em;
 }
+#cadrepopulaire .iconebleu
+{
+    color:#0065fc;
+}
+#cadrepopulaire .iconegrise
+{
+    color: #d9d9d9;
+}
 #section3
 {
     width:100%;
     height:445px ;
 
+}
+#section3 a
+{
+    width:23%;
+    text-decoration: none;
+}
+#section3 a:visited
+{
+    color: black;
+    
 }
 #cadreactivite
 {
@@ -316,7 +363,7 @@ input,value
 
 #cadreactivite .photo
 {
-    width:23%;
+    width:100%;
     height:180px;
     border-radius:30px;
     display: flex;
@@ -334,7 +381,6 @@ input,value
 {
     height: 145px;;
     width: 100%;
-    /* margin-bottom: -18px; */
 }
 #cadreactivite .photo .descriptions
 {
@@ -342,14 +388,17 @@ input,value
     padding-left: 5px;
     align-items: center;
 }
-#cadreactivite .photo:nth-child(3n+1)
+#cadreactivite a:nth-child(3n+1) .photo
 {
+
     height:380px;
-    overflow:hidden;  
+    overflow:hidden;
+     
 }
-#cadreactivite .photo:nth-child(3n+1) img
+#cadreactivite a:nth-child(3n+1) img
 {
-    height:345px; 
+        height:345px; 
+    
 }
 
 
@@ -532,6 +581,7 @@ footer ul
         order:2;
         padding:10px 0 ;
     }
+    
     #cadrehebergement .photo .descriptions
     {
         margin-left:30px;
