--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-@font-face 
-{
-    font-family:'raleway';
-    src: url(Raleway-VariableFont_wght.ttf)format('truetype');
-}
 
 body 
 {
-    font-family:'raleway',arial,serif;
+    font-family:'Raleway',arial,serif;
     box-sizing: border-box;
     width: 100%;
 }
@@ -18,13 +13,9 @@ body
 }
 h1
 {
-    font-size: 1em;
-}
-h2
-{
     font-size: 0.9em ;
 }
-h3
+h2
 {
     font-size:0.8em;
     font-weight:bold;
@@ -46,6 +37,10 @@ header
    justify-content:space-between;
    align-items:center;
    flex-wrap: wrap;
+}
+.navigation li:nth-child(2)
+{
+    color:grey;
 }
 #grey 
 {
@@ -128,8 +123,6 @@ input,value
     height: 100%;
     width:100px;
     align-items: center;
-    padding-top:5px;
-    font-weight: bold;
 }
 #recherche i
 {
@@ -175,6 +168,7 @@ input,value
     background: #deebff;
     padding:12px;
     border-radius: 50%;
+    border: solid 1px #deebff ;
     margin-right:5px;
 }
 
@@ -190,7 +184,7 @@ input,value
     word-wrap:break-word;
 }
 
-#section
+.hebergements
 {
     display: flex;
     flex-direction: row;
@@ -210,17 +204,6 @@ input,value
     flex-direction: column;
 
 }
-#section1 a
-{
-    width:30%;
-    height:200px;
-    text-decoration: none;
-}
-#section1 a:visited
-{
-    color: black;
-    
-}
 
 #cadrehebergement
 {
@@ -234,7 +217,7 @@ input,value
 
 #cadrehebergement .photo
 {
-    width:100%;
+    width:30%;
     height:200px;
     border-radius: 20px;
     padding: 3px 3px 3px 3px;
@@ -248,12 +231,12 @@ input,value
 
 #cadrehebergement .photo img
 {
-    min-height: 130px;
-    height:auto;
+    height:65%;
     width: 100%;
     border-radius: 18px 18px 0 0 ;
+    object-fit: cover;
 }
-#cadrehebergement .descriptions
+.photo .descriptions
 {
     height:70px;
     margin:0 0 0 10px;
@@ -264,14 +247,6 @@ input,value
 {
     margin-bottom:10px;
 }
-#cadrehebergement .iconebleu
-{
-    color:#0065fc
-}
-#cadrehebergement .iconegrise
-{
-    color:#d9d9d9;
-}
 #section2
 {
     width:30%;
@@ -281,16 +256,6 @@ input,value
     padding:10px 10px 0 30px;
     margin:0 0 30px 0;
     position: relative;
-}
-#section2 a
-{
-    width:90%;
-    text-decoration: none;
-}
-#section2 a:visited
-{
-    color: black;
-    
 }
 #titrepopulaire
 {
@@ -305,49 +270,28 @@ input,value
     background-color:white;
     border-radius: 20px;
     overflow: hidden;
-    margin:15px 15px 15px -12px;
+    margin:15px 15px;
     box-shadow:2px 2px rgb(231, 230, 230) ;
-    width:100%;
+    width:90%;
 }
 
 #cadrepopulaire .photo img
 {
-    min-width:40%;
-    width: auto;
+    width:40%;
     height:150px;
     margin: 3px 3px;
     border-radius: 18px 0 0 18px;
+    object-fit: cover;
 }
 #cadrepopulaire .photo .descriptions
 {
-    min-width:60%;
-    width:auto;
+    width:60%;
     line-height:1.2em;
-}
-#cadrepopulaire .iconebleu
-{
-    color:#0065fc;
-}
-#cadrepopulaire .iconegrise
-{
-    color: #d9d9d9;
 }
 #section3
 {
     width:100%;
-    height:auto;
-    margin-bottom: 30px;
-
-}
-#section3 a
-{
-    width:23%;
-    text-decoration: none;
-}
-#section3 a:visited
-{
-    color: black;
-    
+    height:445px ;
 }
 #cadreactivite
 {
@@ -355,14 +299,15 @@ input,value
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    height:470px;
+    height:400px;
     margin-top: 30px;
+    max-width:100%;
 }
 
 #cadreactivite .photo
 {
-    width:100%;
-    height:auto;
+    width:22%;
+    height:180px;
     border-radius:30px;
     display: flex;
     flex-direction: column;
@@ -377,27 +322,27 @@ input,value
 }
 #cadreactivite .photo img
 {
-    height: auto;
-    max-height:180px;
+    height: 145px;;
     width: 100%;
+    object-fit: cover;
 }
 #cadreactivite .photo .descriptions
 {
-    min-height:40px;
-    padding-left: 5px;
+    height:20px;
+    padding-left: 8px;
     align-items: center;
 }
-#cadreactivite a:nth-child(3n+1) .photo
+#cadreactivite .photo:nth-child(3n+1)
 {
+    height:380px;
+    overflow:hidden;  
+}
+#cadreactivite .photo:nth-child(3n+1) img
+{
+    height:345px; 
+}
 
-    height:auto;
-     
-}
-#cadreactivite a:nth-child(3n+1) img
-{
-    height:auto;
-    min-height:420px;  
-}
+
 footer
 {
     display: flex;
@@ -436,24 +381,21 @@ footer ul
     {
         width:95%;
         margin:auto;
+        border:#0065fc 1px solid;
     }
-    h1 
-    {
-        font-size:2.2em;
-    }
-    h2
+    h1
     {
         font-size:2em;
         flex-wrap: wrap;
         margin-left: 15px;
     }
-    h3
+    h2
     {
-        font-size: 1.2em;
+        font-size: 1.9em;
     } 
     p
     {
-        font-size: 1.1em;
+        font-size: 1.5em;
         margin-left: 15px;
     }
     header 
@@ -464,32 +406,21 @@ footer ul
         padding-top: 10px;
         font-size:1.5em;
     }
-    #nav
+  
+    .ligne 
     {
-        width: 106%;
-        margin-left: -20px;
-    }
-    .navigation .ligne 
-    {
-
         width: 50%;
         border-bottom: 2px solid #f2f2f2;
         text-align: center;
         margin-top: 5px;
-        padding-left:20px;
-    }
-    .ligne:hover
-    {
-        border-bottom: 2px solid #0065fc;
+        color:black;
     }
     
     .ligne a:hover
-    {  
+    {   
+        color:#0065fc; 
         border-top: none;
-    }
-    .ligne:nth-child(2)
-    {
-        margin-right: -40px;
+        border-bottom: 2px solid #0065fc;
     }
 
     #inscription 
@@ -508,11 +439,11 @@ footer ul
        margin-left:  -12px;
        margin-top:10px;
        padding-bottom: 3px;
-       width: 101%;
+       width: 411px;
        height:80px;
        
     }
-    #grey 
+     #grey 
     {
         color:black;
     }
@@ -528,7 +459,7 @@ footer ul
         border-radius:18px;
         width: 75px;
     }
-    #recherche span
+    #recherche h2
     {
         display: none;
     }
@@ -553,94 +484,61 @@ footer ul
     }
     #filtre
     {
-        width: 90%;
-        flex-direction: row;
-        flex-wrap: wrap;
+        width: 70%;
+        
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content:start;
     }
     #filtre a
     {
-        font-size: 1.5em;
+        font-size: 2em;
         border: 2px solid #d9d9d9;
         margin-bottom: 10px;
     }
     #filtre h2
     {
-        width:100%;
-        justify-content:start;
         margin-top:0;
         margin-left: 15px;
-        margin-bottom:20px;
     }
     #section1
     {
-        height:auto;
-        width:100%;
-        margin-bottom: 40px;
+        height:3000px;
+        width:1200px;
+        margin-bottom: -50px;
         background:none;
         order:2;
         padding:10px 0 ;
     }
-    #section1 a
-    {
-        width: 100%;
-        height:auto;
-        text-decoration: none;
-        
-    }
-    #section1 a:visited
-    {
-        color: black;
-        
-    }
-        
-    #cadrehebergement
-    {
-        margin-top:-5px;
-        height:auto;
-        min-height: 2000px;
-    }
     #cadrehebergement .photo .descriptions
     {
         margin-left:30px;
-        display:flex;
-        flex-direction: column;
-        min-height: 100px;
     }
-    #cadrehebergement .photo h3
+    #cadrehebergement .photo h2
     {
-        font-size:1.2em;
-        margin-bottom: 15px;
-    }
-    #cadrehebergement p
-    {
-        font-size: 1em;
-        margin:0;
+        font-size:1.8em;
     }
     
     #cadrehebergement .photo
     {
         width:98%;
-        height: auto !important;
+        height:400px;
         margin-left:0;
     }
     #cadrehebergement .photo img
     {
-        width: 101%;
-        height:auto;
-    }
-    #section1 h2
-    {
-        padding-left: 16px;
+        width: 100%;
     }
     #section2
     {
         order: 1;
-        width:100%;
-        margin: 0 -19px 20px -19px;
-        padding:10px 15px 0 17px ;
-        height:auto;
+        width:97%;
+        margin: 0 -15px;
+        padding:10px 17px 0 17px ;
+        border:1px solid #f2f2f2;
+        height:815px;
+        margin-bottom: 20px;
         border-radius: 0%;
-        border:#f2f2f2 3px solid;
     }
     #titrepopulaire i
     {
@@ -648,101 +546,72 @@ footer ul
     }
     #cadrepopulaire .photo
     {
-        height:auto;
-        margin:auto;
+        width:95%;
+        margin: auto;
+        height:213px;
         margin-bottom: 20px;
     }
     #cadrepopulaire .photo img
     {
-        max-width: 60%;
-        height:auto;
-        width:auto;
-        max-height:190px;
+        width:40%;
+        height:280px;
     }
     #cadrepopulaire .photo .descriptions
     {
-        display:flex;
-        flex-flow: column wrap;
-        width:40%;
-        box-sizing: content-box;
-        height:auto;
+        width:60%;
     }
-    #cadrepopulaire .photo .descriptions h3
+    #cadrepopulaire .photo .descriptions h2
     {
-        font-size: 1.2em; 
-        line-height:0.8em;
-        margin-bottom: 5px;
-    }
-    #cadrepopulaire p
-    {
-        margin:0;
-        font-size:1.1em;
-        margin-bottom: 5px;
+        font-size: 1.5em; 
+        line-height:1em;
     }
     #section3
     {
  
         width:100%;
-        height:auto ;
-        margin-bottom: 20px;
+        height:2600px ;
+        margin-bottom: -34px;
+        padding: 0 2.5% 0 2.5%;
     }
-    #section3 a
-    {
-        width:100% !important;
-        text-decoration: none;
-    }
-    #section3 a:visited
-    {
-        color: black;
-        
-    }
+
     #cadreactivite
     {
-        width:100%;
-        height:auto;
-        min-height: 1630px;;
+        height:2500px;
         margin-top: 30px;
         flex-direction: column;
     }
-    #section3 h2
+    #section3 h1
     {
-        margin-left: 17px;
-        margin-bottom: 60px;
+        margin-left: -9px;
     }
     #cadreactivite .photo img
     {
-        height:auto;
-        max-height:none;
-        width:100%;
+        height: 240px;
+        overflow: hidden;
+        /* border: #8b1e82 5px solid; */
     }
-    #cadreactivite .photo h3
+    #cadreactivite .photo h2
     {
-        font-size: 1.2em;
+        font-size: 1.5em;
     }
 
     #cadreactivite .photo
     {
-        width:100%;
-        height:auto;
-        margin-bottom: 60px;
+        width:95%;
+        height:300px;
+  
     }
-    #cadreactivite a:nth-child(3n+1) .photo
+    #cadreactivite .photo:nth-child(3n+1)
     {
-        height:auto;
-        width: 100%;
-        margin-bottom: 60px;
-    }
-    #cadreactivite a:nth-child(3n+1) img 
-    {
-        
-        height: auto;
+        height:300px;
     }
     #cadreactivite .photo .descriptions
     {
         height: 60px;
         width:100%;
-        margin:0 0 0 10px;
+        margin:0;
         flex-wrap: wrap;
+        border: 1px solid yellowgreen;
     }
 
     footer
@@ -764,82 +633,24 @@ footer ul
 }
 
 @media only screen
-    and (max-width: 875px)
+    and (max-width: 834px)
 {
     #section1
     {
         width: 100%;
-        height:auto;
-        margin-bottom: 30px;
-    }
-    #cadrehebergement
-    {
-        height:auto;
-        flex-direction: row;
-        min-height: 500px;
-        margin-top: 20px;
-    }
-    #cadrehebergement .photo
-    {
-        width:100%;
-        height:220px;
-        margin-bottom: 15px;
-    }
-    #cadrehebergement .descriptions
-    {
-        min-height: 70px;
     }
     #section2
     {
         width:100%;
         flex-direction: row;
-        height:auto;
-    }
-    #section2 a
-    {
-        height:auto;
-    }
-    #cadrepopulaire .photo
-    {
-        height:auto;
-    }
-    #cadrepopulaire .photo img
-    {
-        height:auto;
-        max-height:240px;
     }
     #section3
     {
-        width:100%;
+        width:90%;
         margin:auto;
-        height:auto;
-    }
-    #section3 a
-    {
-        width:33%;
-    }
-    #cadreactivite .photo
-    {
-        height:auto;
-        margin-bottom: 40px;
-    }
-    #cadreactivite img
-    {
-        height:auto;
-        min-height: 345px;
-    }
-    #cadreactivite a:nth-child(3n+1) img
-    {
-        min-height: 345px;
-    }
-    #cadreactivite
-    {
-        flex-direction: row;
-        height:auto;
     }
     #cadreactivite .photo .descriptions
     {
         font-size: 0.8em;
-        min-height: 30px;
     } 
 }
